--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </div>
 
   <div class="content">
-    <img class="mynamepic" src="my name 2.PNG">
+    <img class="mynamepic" src="my name 2.png">
     
     <p>A computer science graduate looking to expand his knowledge professionally and flex my artistic muscles with graphics design or video editing</p>
   </div>
