--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <div class="bottombar">
     <div class="contact-info">
-      <span>Email: <a href="jihad0172427@gmail.com">jihad0172427@gmail.com</a></span>
+      <span>Email: <a href="jihad0172427@gmail.com" type="email">jihad0172427@gmail.com</a></span>
       <span>Phone: <a href="tel:+60172427489">+60 17 242 7489</a></span>
   </div>
 
