--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="content">
     <img class="mynamepic" src="my name 2.png">
     
-    <p>A computer science graduate looking to expand his knowledge professionally and flex my artistic muscles with graphics design or video editing</p>
+    <p>A computer science graduate looking to expand his knowledge professionally and flex my artistic muscles with graphics design or video editing. </p>
   </div>
 
   <div>
